<resources>
    <string name="app_name">AutoForex</string>
    <string name="item_name">Currency Name</string>
    <string name="item_current_value">Current Value</string>
    <string name="currency_name">Currency Name</string>
    <string name="currency_current_value">Currency Current Value</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="welcome">Welcome</string>
    <string name="user_currency">IDR 1.000.000</string>
    <string name="logout">Logout</string>
    <string name="prediction">Predict</string>
    <string name="buy">Buy</string>
    <string name="sell">Sell</string>
</resources>